Bugfix for not showing metadata fields in the dropdown that are missing in the existing set because the caridinality is below the highest

--- a/mr-gui/src/pages/API.scss
+++ b/mr-gui/src/pages/API.scss
@@ -39,6 +39,7 @@
                 background-color: $lightest-grey;
             }
             td {
+                vertical-align: middle;
                 word-wrap: break-word;
                 padding: 3px;
                 &.key {
@@ -52,7 +53,9 @@
                     cursor: pointer;
                     i.fa {
                         color: $red;
-                        font-size: 18px;
+                        font-size: 20px;
+                        text-align: center;
+                        padding: 0 10px;
                     }
                 }
                 &.state {
