--- a/mr-gui/src/stylesheets/buttons.scss
+++ b/mr-gui/src/stylesheets/buttons.scss
@@ -46,6 +46,9 @@
         background-color: $lighter-grey;
         color: white;
         border: none;
+        i {
+            color: white;
+        }
     }
     &.red {
         background-color: $red;
